<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E5F5" >

    <ImageView
        android:id="@+id/hintsImageView"
        android:layout_width="0dp"
        android:layout_height="190dp"
        android:background="#E1BEE7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".25"
        app:srcCompat="@drawable/mercedes_1"
        android:contentDescription="@string/random_chosen_car"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/hintsTitle"
        android:textColor="#AB47BC"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hintsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".40" />

    <TextView
        android:id="@+id/hintsCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF0000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/hintsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/hintBlankText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E91E63"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintsImageView"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/hintTextBox"
        android:layout_width="146dp"
        android:layout_height="43dp"
        android:maxLength="1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintBlankText"
        app:layout_constraintVertical_bias="0.252"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/hintsGuessText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/hintPrompt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hintTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintBlankText"
        app:layout_constraintVertical_bias="0.70" />

    <Button
        android:id="@+id/hintsSubmit"
        android:onClick="submit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#EF9A9A"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintTextBox"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/attemptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintsSubmit"
        app:layout_constraintVertical_bias="0.20" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:onClick="exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        app:srcCompat="@drawable/ic_exit_door"
        android:contentDescription="@string/exit_button"
        tools:ignore="VectorDrawableCompat"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>